Comit de finalização do core e testes