@@ -5,28 +5,34 @@ import com.example.pagamentoapi.dto.PagamentoDTO;
 import com.example.pagamentoapi.dto.TransacaoResponseDTO;
 import com.example.pagamentoapi.model.Transacao;
 import com.example.pagamentoapi.service.TransacaoService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
+@RunWith(SpringRunner.class)
+@WebMvcTest(TransacaoController.class)
 class TransacaoControllerTest {
 
     @InjectMocks
     private TransacaoController transacaoController;
 
-    @Mock
+    @MockBean
     private TransacaoService transacaoService;
 
     @BeforeEach
@@ -34,98 +40,75 @@ class TransacaoControllerTest {
         MockitoAnnotations.openMocks(this);
     }
 
+
     @Test
-    void testRealizarPagamento() {
-        // Dado um PagamentoDTO e Transacao simulados
-        PagamentoDTO pagamentoDTO = new PagamentoDTO(); // Preencher conforme necessário
-        Transacao transacaoSimulada = new Transacao();
-        transacaoSimulada.setId(UUID.fromString("0ec26c13-777e-4593-aad6-f69988e15afa"));
-
-        when(transacaoService.realizarPagamento(any(PagamentoDTO.class))).thenReturn(transacaoSimulada);
-
-        // Quando o método realizarPagamento é chamado
-        ResponseEntity<Transacao> response = transacaoController.realizarPagamento(pagamentoDTO);
-
-        // Então verifica-se que o status é 200 OK e o corpo contém a transação
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(transacaoSimulada, response.getBody());
+    void testRealizarPagamentoComArquivo() throws Exception {
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.findAndRegisterModules();
+        PagamentoDTO pagamentoDTO = objectMapper.readValue(
+                getClass().getClassLoader().getResource("pagamento_simulacao.json"),
+                PagamentoDTO.class
+        );
+        ResponseEntity<TransacaoResponseDTO> response = transacaoController.realizarPagamento(pagamentoDTO);
+        assertEquals(HttpStatus.OK, response.getStatusCode(),"Realizou o Pagamento");
     }
 
     @Test
     void testBuscarTransacao_Sucesso() {
-        // Dado um ID de transação existente
-        String transacaoId = "100023568900001";
-        Transacao transacaoSimulada = new Transacao();
-        transacaoSimulada.setId(UUID.fromString(transacaoId));
-
+        String transacaoId = "d99cc9be-1dd2-494b-951e-5cd42302d7fa";
+        Transacao transacaoSimulada = criarTransacaoSimulada();
         when(transacaoService.buscarTransacao(transacaoId)).thenReturn(Optional.of(transacaoSimulada));
-
-        // Quando o método buscarTransacao é chamado
         ResponseEntity<TransacaoResponseDTO> response = transacaoController.buscarTransacao(transacaoId);
-
-        // Então verifica-se que o status é 200 OK e o corpo contém a transação
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(transacaoSimulada, response.getBody());
+        assertEquals(transacaoSimulada.getId().toString(), "d99cc9be-1dd2-494b-951e-5cd42302d7fa");
     }
 
     @Test
     void testBuscarTransacao_NaoEncontrada() {
-        // Dado um ID de transação inexistente
         String transacaoId = "999999999";
         when(transacaoService.buscarTransacao(transacaoId)).thenReturn(Optional.empty());
-
-        // Quando o método buscarTransacao é chamado
         ResponseEntity<TransacaoResponseDTO> response = transacaoController.buscarTransacao(transacaoId);
-
-        // Então verifica-se que o status é 404 Not Found
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
     void testBuscarTodasTransacoes() {
-        // Dado que o serviço retorna uma lista vazia de transações
-        when(transacaoService.buscarTodasTransacoes()).thenReturn(List.of());
-
-        // Quando o método buscarTodasTransacoes é chamado
+        when(transacaoService.buscarTodasTransacoes()).thenReturn(Collections.emptyList());
         ResponseEntity<List<TransacaoResponseDTO>> response = transacaoController.buscarTodasTransacoes();
-
-        // Então verifica-se que o status é 200 OK e a lista de transações está vazia
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(0, response.getBody().size());
     }
 
     @Test
     void testEstornarPagamento_Sucesso() {
-        // Dado um ID de transação existente que pode ser estornado
-        String transacaoId = "100023568900001";
-        Transacao transacaoSimulada = new Transacao();
-        transacaoSimulada.setId(UUID.fromString(transacaoId));
-        transacaoSimulada.setStatus(Transacao.Status.valueOf("CANCELADO"));
-
+        // Setup
+        String transacaoId = "d99cc9be-1dd2-494b-951e-5cd42302d7fa";
+        Transacao transacaoSimulada = criarTransacaoSimulada();
+        transacaoSimulada.setStatus(Transacao.Status.CANCELADO);
         when(transacaoService.estornarPagamento(transacaoId)).thenReturn(Optional.of(transacaoSimulada));
-
-        // Quando o método estornarPagamento é chamado
-        ResponseEntity<Transacao> response = transacaoController.estornarPagamento(transacaoId);
-
-        // Então verifica-se que o status é 200 OK e o corpo contém a transação estornada
+        ResponseEntity<TransacaoResponseDTO> response = transacaoController.estornarPagamento(transacaoId);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(transacaoSimulada, response.getBody());
+        assertEquals(Transacao.Status.CANCELADO, transacaoSimulada.getStatus());
+
     }
 
     @Test
     void testEstornarPagamento_NaoEncontrado() {
-        // Dado um ID de transação inexistente
         String transacaoId = "999999999";
         when(transacaoService.estornarPagamento(transacaoId)).thenReturn(Optional.empty());
-
-        // Quando o método estornarPagamento é chamado
-        ResponseEntity<Transacao> response = transacaoController.estornarPagamento(transacaoId);
-
-        // Então verifica-se que o status é 404 Not Found
+        ResponseEntity<TransacaoResponseDTO> response = transacaoController.estornarPagamento(transacaoId);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
-
-
-
+    private Transacao criarTransacaoSimulada() {
+        Transacao transacao = new Transacao();
+        transacao.setId(UUID.fromString("d99cc9be-1dd2-494b-951e-5cd42302d7fa"));
+        transacao.setCartao("4444********1234");
+        transacao.setEstabelecimento("PetShop Mundo cão");
+        transacao.setValor(1600.5);
+        transacao.setNsu("7628163859");
+        transacao.setCodigoAutorizacao("470927334");
+        transacao.setStatus(Transacao.Status.AUTORIZADO);
+        return transacao;
+    }
 }
